fixed spacing and sizing of small images and overlay color. Also completed the titles for each small picture

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,20 +186,142 @@ padding-bottom: 0.6em;
 }
 
 #small-images {
-    margin-top: 3em;
+    margin-top: 2em;
     margin-left: 3em;
+    width: 100%;
     display: flex;
-    flex-basis: 100%;
-    justify-content: space-around;
     flex-wrap: wrap;
+    column-gap: 2%;
+    row-gap: 2em;
+    
+    
     
 }
 
+#small-image-1 {
+    width: 49%;
+    height: 20vh;
+    border: 5px solid var(--main-lightblue);
+    background-position: center;
+    background-size: cover;
+    background-image: url(../images/02-portfolio-1.jpg);
+}
+
+#small-image-2 {
+    width: 49%;
+    height: 20vh;
+    border: 5px solid var(--main-lightblue);
+    background-position: center;
+    background-size: cover;
+    background-image: url(../images/02-portfolio-2.jpg);
+}
+
+#small-image-3 {
+    width: 49%;
+    height: 20vh;
+    border: 5px solid var(--main-lightblue);
+    background-position: center;
+    background-size: cover;
+    background-image: url(../images/02-portfolio-3.jpg);
+}
+
+#small-image-4 {
+    width: 49%;
+    height: 20vh;
+    border: 5px solid var(--main-lightblue);
+    background-position: center;
+    background-size: cover;
+    background-image: url(../images/02-run-buddy.jpg);
+}
+
+.small-images-overlay {
+    background-color: var(--image-overlay-color);
+    width: 100;
+    height: 100%;
+    position: relative
+}
+
+.small-title-containers {
+    width: fit-content;
+    background-color: var(--main-lightblue);
+    padding: 0.6em 0.6em 0 0.6em;
+    margin-bottom: 0.25em;
+    position: absolute;
+    bottom: 15px;
+}
+
+.small-title-containers h4 {
+    font-size: 2.5em;
+    margin-bottom: 0.25em;
+}
+
+.small-title-containers p {
+    padding-bottom: 0.6em;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* 
+
+    
+}
+
+
+
+
+ */
+
+
+
+
+
+
+
+
+/* 
 #small-image-1 {
     background-image: url(../images/02-portfolio-1.jpg);
     border: 5px solid var(--main-lightblue);
     background-position: center;
     background-size: cover;
+    width: auto;
+    height: auto;
+    
    
     
 }
@@ -209,6 +331,8 @@ padding-bottom: 0.6em;
     border: 5px solid var(--main-lightblue);
     background-position: center;
     background-size: cover;
+    width: auto;
+    height: auto;
    
     
 }
@@ -218,6 +342,8 @@ padding-bottom: 0.6em;
     border: 5px solid var(--main-lightblue);
     background-position: center;
     background-size: cover;
+    width: auto;
+    height: auto;
     
     
 }
@@ -227,12 +353,22 @@ padding-bottom: 0.6em;
     border: 5px solid var(--main-lightblue);
     background-position: center;
     background-size: cover;
+    width: auto;
+    height: auto;
+    
     
     
 }
 
-
-
+.small-images-overlay {
+    width: 37vw;
+    height: 20vh;
+    /* margin-bottom: 1em; */
+    /* padding: 0;
+    background-color: var(--image-overlay-color);
+    position: relative;
+}
+  */
 
 
 
